--- a/travel/src/components/homepage/homepage.css
+++ b/travel/src/components/homepage/homepage.css
@@ -1,3 +1,103 @@
 .slide{
     width: 90%;
 }
+.backgroundimg{
+    background-color: rgb(51, 59, 170);
+}
+/* homepage.css */
+.carousel-item {
+    position: relative;
+  }
+  
+  .carousel-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    background-color: rgba(162, 162, 219,0.7);
+    border-radius: 5px;
+    padding: 20px;
+   
+    /* Adjust the styles as needed for the centered text */
+  }
+  /* carousel.css */
+
+
+
+/* Style for the surf-button */
+.surf-button {
+  background-color: #3cd6c2;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+/* Hover effect for the surf-button */
+.surf-button:hover {
+  background-color: #2eafa9;
+  outline: none;
+}
+.popular-packages{
+  font-size: 200;
+  font-weight: 300;
+  color: #2eafa9;
+  text-align: center;
+}
+
+/* adventure.css */
+
+/* Card container styles */
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #f1f1f1;
+  padding:20px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  width: 500px;
+  height:250px;
+  margin-top: 30px;
+  margin-left: 200px; /* Adjust the width as needed */
+  background-image: url('../../images/bgadventure.jpg');
+  background-size: cover; /* Adjust the background size as needed */
+  background-position: center; /* Center the background image */
+  background-color: rgba(241, 241, 241, 0.3);
+}
+
+/* Style for the adventure-text */
+.adventure-text {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+/* Style for the Dare! button */
+.dare-button {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+ 
+}
+
+/* Hover effect for the Dare! button */
+.dare-button:hover {
+  background-color: #0056b3;
+}
+
+  
